--- a/lang/en.json
+++ b/lang/en.json
@@ -9,8 +9,8 @@
       "Cha": { "long": "Charisma", "abbr": "cha" }
     },
     "SheetLabels": {
-      "Actor": "Boilerplate Actor Sheet",
-      "Item": "Boilerplate Item Sheet"
+      "Actor": "Wf4jdr4eFr Actor Sheet",
+      "Item": "Wf4jdr4eFr Item Sheet"
     },
     "Item": {
       "Spell": {
