--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,5 @@
 {
-  "BOILERPLATE": {
+  "WHF4": {
     "Ability": {
       "Str": { "long": "Strength", "abbr": "str" },
       "Con": { "long": "Constitution", "abbr": "con" },
